build: Use Java 17 for examples (#24)
* build: Use Java 17 for examples

* use modern java accumulators

---------

Co-authored-by: Alexander Söderberg <alexander.soderberg@incendo.org>